--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "next-themes": "^0.4.3",
     "openai": "^4.76.1",
     "prettier": "^3.3.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@types/node": "^22",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.14",
